[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/drop.png" type="Texture" id=1]
[ext_resource path="res://scripts/modifier_scripts/HealthDegenMod.gd" type="Script" id=2]

[node name="HealthDegenMod" type="Node2D"]
script = ExtResource( 2 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="Tickrate" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.403922, 0.698039, 0.180392, 1 )
position = Vector2( 16, -40 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="Tickrate" to="." method="_on_Tickrate_timeout"]
